--- a/index.css
+++ b/index.css
@@ -1,11 +1,42 @@
 <style>
-a[href="#tag1"] {background: #FF764E}
-a[href="#tag2"] {background: #5ED3EB}
-a[href="#tag3"] {background: #FFCD69}
+a[href="#tag1"] {background: #FF764E;
+    border-radius: 25px;
+    padding: 20px;
+    width: 200px;
+    height: 150px;}
+a[href="#tag2"] {background: #5ED3EB;
+    border-radius: 25px;
+    padding: 20px;
+    width: 200px;
+    height: 150px;}
+a[href="#tag3"] {background: #FFCD69;
+    border-radius: 25px;
+    padding: 20px;
+    width: 200px;
+    height: 150px;}
 h1 {font-family: Chelsea Market;}
 * {font-family:  Roboto Mono;}
-.highlighted {background: #DDB9A3}
+.highlighted {background: #DDB9A3
+margin:0 auto;
+text-align: center}
 footer {background: #F9E7DC}
 span {font-weight: bold}
-
+nav a {margin-top: 20px;
+    margin-left:0 auto;
+    margin-right:0 auto}
+.container {margin-left: 50%;
+text-align: center}   
+img[src="header_img.jpg"] {margin-right: 50%
+}
+.centered {width: 30%;
+margin:0 auto}
+img[src="https://image.flaticon.com/icons/svg/2979/2979348.svg"] {margin:0 auto;
+height: 25%;
+width: 25%}
+img[src="https://image.flaticon.com/icons/svg/820/820374.svg"] {margin:0 auto;
+    height: 25%;
+    width: 25%}
+.centered p {text-align: center}
+img[src="footer_img.png"] {eight: 20%;
+width: 100%}
 </style>
